Add option for user provided tls
