# apis/core/v1alpha1/types.go
@@ -52,7 +52,7 @@ type VaultServerSpec struct {
 	ConfigMapName string `json:"configMapName,omitempty"`
 
 	// TLS policy of vault nodes
-	TLS *TLSPolicy `json:"TLS,omitempty"`
+	TLS *TLSPolicy `json:"tls,omitempty"`
 
 	// backend storage configuration for vault
 	BackendStorage BackendStorageSpec `json:"backendStorage"`
@@ -140,29 +140,20 @@ type VaultStatus struct {
 }
 
 // TLSPolicy defines the TLS policy of the vault nodes
+// If this is not set, operator will auto-gen TLS assets and secrets.
 type TLSPolicy struct {
-	// StaticTLS enables user to use static x509 certificates and keys,
-	// by putting them into Kubernetes secrets, and specifying them here.
-	// If this is not set, operator will auto-gen TLS assets and secrets.
-	Static *StaticTLS `json:"static,omitempty"`
-}
-
-type StaticTLS struct {
-	// ServerSecret is the secret containing TLS certs used by each vault node
+	// TLSSecret is the secret containing TLS certs used by each vault node
 	// for the communication between the vault server and its clients.
-	// The server secret should contain two files: server.crt and server.key
-	// The server.crt file should only contain the server certificate.
-	// It should not be concatenated with the optional ca certificate as allowed by https://www.vaultproject.io/docs/configuration/listener/tcp.html#tls_cert_file
+	// The secret should contain three files:
+	//	- ca.crt
+	// 	- server.crt
+	// 	- server.key
+	//
 	// The server certificate must allow the following wildcard domains:
-	// localhost
-	// *.<namespace>.pod
-	// <vault-cluster-name>.<namespace>.svc
-	ServerSecret string `json:"serverSecret,omitempty"`
-
-	// ClientSecret is the secret containing the CA certificate
-	// that will be used to verify the above server certificate
-	// The ca secret should contain one file: vault-client-ca.crt
-	ClientSecret string `json:"clientSecret,omitempty"`
+	// 	- localhost
+	// 	- *.<namespace>.pod
+	// 	- <vaultServer-name>.<namespace>.svc
+	TLSSecret string `json:"tlsSecret"`
 }
 
 // TODO : set defaults and validation
